# lpeng_llama_infer

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
lpeng_llama_infer/include/base/: alloc.h  base.h  buffer.h  tick.h
lpeng_llama_infer/include/model/: config.h  llama2.h  model.h
lpeng_llama_infer/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h
lpeng_llama_infer/include/sampler/: argmax_sampler.h
lpeng_llama_infer/include/tensor/: tensor.h
lpeng_llama_infer/source/base/: alloc_cpu.cpp
lpeng_llama_infer/source/op/kernels/cpu/: add_kernel.h  emb_kernel.h
test/optimized/: test_allocator.cpp
tools/: model.py
